# vame

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: Lighting.fs  Lighting.vs
src/: .gitmodules  SceneManager.cpp  main.cpp  network.cpp  network.h  output
